# esp32-gauge-pod-2

./: .gitignore  AGENTS.md  README.md  platformio.ini
esp-data-hub-2/main/: CMakeLists.txt  Kconfig.projbuild  analog_sensors.c  analog_sensors_backend.h  analog_sensors_math.c  analog_sensors_real_ads1115.c  app_context.c  app_context.h  can_transport.c  can_transport.h  can_types.h  ecu_data_source.h  ecu_data_source_mock.c  ecu_request.c  ecu_request.h  idf_component.yml  main.c  main.py  request_ecu.c  request_ecu.h  task_analog_data.c  task_analog_data.h  task_twai_monitor.c  task_twai_monitor.h  task_uart_emitter.c  telemetry_codec.c  telemetry_codec.h
esp-data-hub-2/main/data_analog/: analog_sensors.c  analog_sensors.h  analog_sensors_math.c  analog_sensors_math.h  analog_sensors_mock.c  analog_sensors_real_ads1115.c  pressure_filter.c  pressure_filter.h
esp-data-hub-2/main/data_canbus/: can_transport.c  can_transport.h  isotp.c  isotp.h  isotp_codec.c  isotp_codec.h  isotp_response.c  isotp_response.h  request_ecu.c  request_ecu.h  request_vdc.c  request_vdc.h
esp-data-hub-2/main/racechrono/: racechrono_ble.c  racechrono_ble.h  racechrono_packet.c  racechrono_packet.h
esp-data-hub-2/main/tasks/: task_analog_sensors.c  task_analog_sensors.h  task_can_rx_dispatcher.c  task_can_rx_dispatcher.h  task_canbus_data.c  task_canbus_data.h  task_car_data.c  task_car_data.h  task_ecu_ssm.c  task_ecu_ssm.h  task_racechrono_ble.c  task_racechrono_ble.h  task_twai_monitor.c  task_uart_emitter.c  task_uart_emitter.h  (+2 more)
esp32-data-display-2/main/: CMakeLists.txt  Kconfig.projbuild  car_data.c  car_data.h  display_render_task.c  display_render_task.h  hw_jpeg.c  hw_jpeg.h  idf_component.yml  logger.c  logger.h  main.c  monitoring.c  monitoring.h  monitors.h  uart_pipeline_task.c  uart_pipeline_task.h  ui_components.c  ui_components.h  ui_controller.c  ui_controller.h  usb_drive.c  usb_drive.h
esp32-shared/: CMakeLists.txt
esp32-shared/include/: cobs.h  telemetry_protocol.h  telemetry_types.h
esp32-shared/src/: telemetry_protocol.c
esp32-shared/test/: README.md  test_telemetry_protocol.c
(+78 files in other folders)
